FE: finish script detail page

--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "diff": "^7.0.0",
     "embla-carousel-react": "8.5.1",
     "file-saver": "^2.0.5",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "monaco-editor": "^0.52.2",
     "next": "^14.2.26",
     "next-themes": "latest",
     "react": "^19",
@@ -64,6 +66,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/diff": "^7.0.2",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
     "@types/react": "^19",
