--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "^14.2.26",
     "next-themes": "latest",
     "react": "^19",
+    "react-avatar-editor": "^13.0.2",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
@@ -70,6 +71,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
     "@types/react": "^19",
+    "@types/react-avatar-editor": "^13.0.4",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
