--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build -p 3002",
+    "build": "next build",
     "start": "next start -p 3002",
     "lint": "next lint"
   },
