--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "smart-farming-proj",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -52,6 +52,7 @@
     "monaco-editor": "^0.52.2",
     "next": "^14.2.26",
     "next-themes": "latest",
+    "qs": "^6.14.0",
     "react": "^19",
     "react-avatar-editor": "^13.0.2",
     "react-day-picker": "8.10.1",
@@ -70,6 +71,7 @@
     "@types/diff": "^7.0.2",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
+    "@types/qs": "^6.9.18",
     "@types/react": "^19",
     "@types/react-avatar-editor": "^13.0.4",
     "@types/react-dom": "^19",
