--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.454.0",
     "monaco-editor": "^0.52.2",
     "next": "^14.2.26",
+    "next-intl": "^4.0.2",
     "next-themes": "latest",
     "qs": "^6.14.0",
     "react": "^19",
