FE: fix bug when deploy

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,3 +25,5 @@ jobs:
           context: .
           push: true
           tags: cuson108/smart-farming-web-portal:latest
+          build-args: |
+            NEXT_PUBLIC_API_ENDPOINT=${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
