Add var at build time

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,4 +27,4 @@ jobs:
           tags: cuson108/smart-farming-web-portal:latest
           build-args: |
             NEXT_PUBLIC_API_ENDPOINT=https://lovely-smile-production.up.railway.app
-            NEXT_PUBLIC_SOCKET_ENDPOINT=crossover.proxy.rlwy.net:14760
+            NEXT_PUBLIC_SOCKET_ENDPOINT=lovely-smile-production.up.railway.app:3004
