--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -46,5 +46,6 @@ jobs:
           sshpass -p "${{ secrets.VM_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@10.1.8.52 "
             cd /home/ubuntu/Smart-farming-web-portal-v2.0 &&
             git pull origin main &&
+            docker pull cuson108/smart-farming-web-portal:latest &&
             docker compose up -d --build
           "
