--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,7 @@ version: "3.9"
 
 services:
   smart-farming-portal:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        NEXT_PUBLIC_API_ENDPOINT: "https://lovely-smile-production.up.railway.app"
-        NEXT_PUBLIC_SOCKET_ENDPOINT: "wss://lovely-smile-production.up.railway.app"
+    image: cuson108/smart-farming-web-portal:latest
     container_name: smart-farming-portal
     ports:
       - "3000:3000"
@@ -15,4 +10,4 @@ services:
     working_dir: /app
     environment:
       - NODE_ENV=production
-    command: npm start  # or npm start if package.json is set
+    command: npm start
