--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,8 +26,8 @@ jobs:
           push: true
           tags: cuson108/smart-farming-web-portal:latest
           build-args: |
-            NEXT_PUBLIC_API_ENDPOINT=https://lovely-smile-production.up.railway.app
-            NEXT_PUBLIC_SOCKET_ENDPOINT=wss://lovely-smile-production.up.railway.app
+            NEXT_PUBLIC_API_ENDPOINT=http://10.1.8.52:3002
+            NEXT_PUBLIC_SOCKET_ENDPOINT=wss://10.1.8.52:3002
 
       - name: 📥 Install OpenVPN and sshpass
         run: sudo apt-get update && sudo apt-get install -y openvpn sshpass
