--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,7 +27,7 @@ jobs:
           tags: cuson108/smart-farming-web-portal:latest
           build-args: |
             NEXT_PUBLIC_API_ENDPOINT=https://antamtuoi.hpcc.vn/api
-            NEXT_PUBLIC_SOCKET_ENDPOINT=wss://antamtuoi.hpcc.vn/api
+            NEXT_PUBLIC_SOCKET_ENDPOINT=wss://antamtuoi.hpcc.vn/socket.io
 
       - name: 📥 Install OpenVPN and sshpass
         run: sudo apt-get update && sudo apt-get install -y openvpn sshpass
