--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -48,4 +48,5 @@ jobs:
             git pull origin main &&
             docker pull cuson108/smart-farming-web-portal:latest &&
             docker compose up -d --build
+            docker image prune -f
           "
