FE: debug vpn connect when ci/cd

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           echo "${{ secrets.VPN_CONFIG }}" | base64 -d > vpn.ovpn
           echo -e "${{ secrets.VPN_USERNAME }}\n${{ secrets.VPN_PASSWORD }}" > auth.txt
-          sudo openvpn --config vpn.ovpn --auth-user-pass auth.txt --daemon
+          sudo openvpn --config vpn.ovpn --auth-user-pass auth.txt --daemon --log /tmp/openvpn.log
+          cat /tmp/openvpn.log
 
       - name: ⏱️ Wait for VPN to connect
         run: |
