--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -48,6 +48,7 @@
     "diff": "^7.0.0",
     "embla-carousel-react": "8.5.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.11.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "monaco-editor": "^0.52.2",
@@ -62,6 +63,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sharp": "^0.34.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
