--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "cookies-next": "^5.1.0",
+    "cronstrue": "^2.61.0",
     "date-fns": "4.1.0",
     "diff": "^7.0.0",
     "embla-carousel-react": "8.5.1",
